# NeuralNetworkFromScratch

./: CMakeLists.txt
.github/workflows/: ci.yml
include/: ActivationFunctions.h  Adam.h  DataLoader.h  Layer.h  LossFunction.h  Momentum.h  NeuralNetwork.h  Optimizer.h  SGD.h
src/: ActivationFunctions.cpp  Adam.cpp  DataLoader.cpp  Layer.cpp  LossFunction.cpp  Momemtum.cpp  Momentum.cpp  NeuralNetwork.cpp  SGD.cpp
tests/: test.cpp
